# cargo-bitbake-ws-dep-bug

./: Cargo.toml  README.md
foo/: Cargo.toml  foo_0.1.0.bb
nfkldsnk432432/: Cargo.toml
