[package]
name = "foo"
version = "0.1.0"
edition = "2021"
description = "Foo"
homepage = "foo.bar"
license = ""

[dependencies]
nfkldsnk432432 = { workspace = true }
# The following declaration works
# nfkldsnk432432 = { git = "https://github.com/elaye/cargo-bitbake-ws-dep-bug ", branch = "main", version = "0.1.0" }